# BochumOxide

./: .gitignore  Cargo.toml  README.md  patch.diff
src/: command.rs  gui.rs  log.rs  main.rs  recipe.rs  utils.rs
src/binary_handling/: elf.rs  mod.rs  pe.rs
src/lang/: ast.rs  grammar.pest  mod.rs
src/misc/: cyclic.rs  fiddling.rs  mod.rs  packing.rs
src/program_io/: local_io.rs  mod.rs  network_io.rs
test_data/: bin32  bin64  bin_arm32  bin_arm64
test_data/exploitable_bin/: exploitable  main.c  sol.py
