[package]
name = "BochumOxide"
version = "0.1.0"
authors = ["Leon von Mulert <leonvonmulert@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
base64 = "0.13.0"
byteorder = "1.4.3"
goblin = "0.4"
hex = "0.4.3"
iced = "0.3.0"
iced_graphics = "0.2.0"
iced_native = "0.4.0"
iced_wgpu = "0.4.0"
log = "0.4.14"
pest = "2.0"
pest_derive = "2.0"
regex = "1.5.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.48"
simplelog = "0.10.0"
timeout-readwrite = "0.1"
unicorn = { path = "unicorn/bindings/rust", version="1.0.0", optional = true }
which = "4.1.0"

[features]
uni = ["unicorn"]
